--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "twitter-js",
+  "name": "twitter.js",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
@@ -9,6 +9,13 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "express": "^4.13.3"
+    "body-parser": "^1.14.0",
+    "express": "^4.13.3",
+    "lodash": "^3.10.1",
+    "mime": "^1.3.4",
+    "morgan": "^1.6.1",
+    "mysql": "^2.9.0",
+    "sequelize": "^3.9.0",
+    "swig": "^1.4.2"
   }
 }
